@@ -20,6 +20,13 @@ import org.mikem.tumblr.api.util.TumblrType;
 public class ServiceReadTest extends BaseServiceTest {
 
 
+	@Test
+	public void testReadAllWithDefaults() throws Exception {
+		TumblrService service = new TumblrService(configuration.getString("logname"));
+		TumbleLog log = service.read();
+		Assert.assertNotNull(log);
+		Assert.assertTrue(log.getPosts().size() > 0);
+	}
 	
 	@Test
 	public void testReadType() throws Exception {
@@ -90,8 +97,8 @@ public class ServiceReadTest extends BaseServiceTest {
 		Assert.assertEquals(log.getTitle(), "the higher you fly");
 		Assert.assertEquals(log.getTimezone(), "US/Eastern");
 		Assert.assertTrue(log.getDescription().startsWith("The future you have "));
-		Assert.assertEquals(new Integer(10), log.getTotal());
-		Assert.assertEquals(new Integer(0), log.getStart());
+		Assert.assertEquals(Integer.valueOf(10), log.getTotal());
+		Assert.assertEquals(Integer.valueOf(0), log.getStart());
 		Assert.assertEquals(2, log.getFeeds().size());
 		
 		TumbleFeed feed = log.findFeedById("336714");
